--- a/diagram/templates/diagram/show_diagram.html
+++ b/diagram/templates/diagram/show_diagram.html
@@ -35,8 +35,8 @@
                             <select name="activity_new" style="width: min-content; border: none;"
                                     onchange="this.form.submit()">
                                 {% for choice in choices %}
-                                    <option {% if activity.name.name == choice.0 %}selected{% endif %} class="small"
-                                            value={{ choice.0 }}>{{ choice.0 }}</option>
+                                    <option {% if activity.name.name == choice %}selected{% endif %} class="small"
+                                            value="{{ choice }}">{{ choice }}</option>
                                 {% endfor %}
                             </select>
                         </form>
