--- a/diagram/templates/diagram/soldier_list.html
+++ b/diagram/templates/diagram/soldier_list.html
@@ -23,6 +23,10 @@
         }
     </style>
 
+    <div class="d-flex flex-column align-items-center">
+        <h3>{{ request.user.subdivision }}</h3>
+    </div>
+
     <table class="table">
         <thead>
         <tr class="d-flex justify-content-center">
