--- a/diagram/templates/diagram/soldier_create.html
+++ b/diagram/templates/diagram/soldier_create.html
@@ -3,6 +3,10 @@
 
 {% block content %}
     <div class="d-flex flex-column align-items-center">
+        <a class="mb-1" href="{% url 'soldier-list' %}">
+            <button class="btn btn-outline-primary">Wróć</button>
+        </a>
+
         <form class="col-md-4" method="post">
             {% csrf_token %}
             {{ form|crispy }}
