--- a/diagram/templates/diagram/soldier_detail.html
+++ b/diagram/templates/diagram/soldier_detail.html
@@ -3,6 +3,10 @@
 
 {% block content %}
     <div class="d-flex flex-column align-items-center">
+        <a class="mb-1" href="{% url 'soldier-list' %}">
+            <button class="btn btn-outline-primary">Wróć</button>
+        </a>
+
         <h3>{{ object }}</h3>
 
         <form method="get">
