--- a/diagram/templates/diagram/show_diagram.html
+++ b/diagram/templates/diagram/show_diagram.html
@@ -59,7 +59,9 @@
                             {% if day.0.weekday == 6 or day.1 %}color: crimson{% endif %}">
                     {{ day.0|date:"d M" }}<br>{% if day.1 %}<a data-bs-toggle="tooltip"
                                                                data-bs-title="{{ day.1 }}">{% bs_icon 'info-circle' %}
-                </a>{% endif %}{{ day.0|date:"D" }}
+                </a>{% endif %}{{ day.0|date:"D" }}{% if day.2 %}<a data-bs-toggle="tooltip"
+                                                               data-bs-title="{{ day.2 }}">{% bs_icon 'exclamation-triangle-fill' color='red' %}
+                </a>{% endif %}
                 </th>
             {% endfor %}
         </tr>
@@ -101,5 +103,5 @@
         {% endfor %}
         </tbody>
     </table>
-    </p>
+
 {% endblock %}
