editing colors for diagram activities with color picker - multiple forms based on model form

--- a/diagram/templates/diagram/show_diagram.html
+++ b/diagram/templates/diagram/show_diagram.html
@@ -106,4 +106,9 @@
         </tbody>
     </table>
 
+    <div class="d-flex flex-row-reverse">
+        <a class="btn btn-outline-primary" href="{% url 'activity-colors-update' %}">Edytuj kolory</a>
+    </div>
+
+
 {% endblock %}
