time frames for statistics (90 days, 30 days, 180 days, all)

--- a/soldiers_statistics/templates/soldiers_statistics/statistics.html
+++ b/soldiers_statistics/templates/soldiers_statistics/statistics.html
@@ -2,36 +2,55 @@
 {% load crispy_forms_filters %}
 
 {% block content %}
+    <div class="d-flex flex-column align-items-center">
+        <form method="get">
+            <h5><select name="days_before" style="border: none; text-align: center;"
+                        onchange="this.form.submit()">
+                <option {% if request.GET.days_before == '90' %}selected{% endif %} value="90">
+                    Aktywności z ostatnich 90 dni do dzisiaj włącznie
+                </option>
+                <option {% if request.GET.days_before == '30' %}selected{% endif %} value="30">
+                    Aktywności z ostatnich 30 dni do dzisiaj włącznie
+                </option>
+                <option {% if request.GET.days_before == '180' %}selected{% endif %} value="180">
+                    Aktywności z ostatnich 180 dni do dzisiaj włącznie
+                </option>
+                <option {% if request.GET.days_before == 'all' %}selected{% endif %} value="all">
+                    Wszystkie aktywności do dzisiaj włącznie
+                </option>
+            </select></h5>
+        </form>
 
-    <table class="table">
-        <thead>
-        <tr class="d-flex justify-content-center">
-            <th class="col col-md-1 px-0" scope="col">#</th>
-            <th class="col col-md-2 px-0" scope="col">nazwisko, imię, stopień</th>
-            <th class="col col-md-1 px-0" scope="col">L4</th>
-            <th class="col col-md-1 px-0" scope="col">Dyżury</th>
-            <th class="col col-md-1 px-0" scope="col">Służby</th>
-            <th class="col col-md-1 px-0" scope="col">HDK</th>
-            <th class="col col-md-1 px-0" scope="col">Urlopy i wolne</th>
-            <th class="col col-md-1 px-0" scope="col">Kursy</th>
-        </tr>
-        </thead>
-        <tbody>
-        {% for soldier in statistics %}
+        <table class="table">
+            <thead>
             <tr class="d-flex justify-content-center">
-                <th class="col col-md-1 px-0" scope="row">{{ forloop.counter }}</th>
-                <td class="col col-md-2 px-0">
-                    <a class="text-decoration-none text-dark" href="{% url 'soldier-detail' soldier.pk %}">
-                        {{ soldier.last_name }} {{ soldier.first_name }} ({{ soldier.rank }})</a></td>
-                <td class="col col-md-1 px-0">{{ soldier.L4 }}</td>
-                <td class="col col-md-1 px-0">{{ soldier.Dyżury }}</td>
-                <td class="col col-md-1 px-0">{{ soldier.Służby }}</td>
-                <td class="col col-md-1 px-0">{{ soldier.HDK }}</td>
-                <td class="col col-md-1 px-0">{{ soldier.Urlopy }}</td>
-                <td class="col col-md-1 px-0">{{ soldier.Kursy }}</td>
+                <th class="col col-md-1 px-0" scope="col">#</th>
+                <th class="col col-md-2 px-0" scope="col">nazwisko, imię, stopień</th>
+                <th class="col col-md-1 px-0" scope="col">L4</th>
+                <th class="col col-md-1 px-0" scope="col">Dyżury</th>
+                <th class="col col-md-1 px-0" scope="col">Służby</th>
+                <th class="col col-md-1 px-0" scope="col">HDK</th>
+                <th class="col col-md-1 px-0" scope="col">Urlopy i wolne</th>
+                <th class="col col-md-1 px-0" scope="col">Kursy</th>
             </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            </thead>
+            <tbody>
+            {% for soldier in statistics %}
+                <tr class="d-flex justify-content-center">
+                    <th class="col col-md-1 px-0" scope="row">{{ forloop.counter }}</th>
+                    <td class="col col-md-2 px-0">
+                        <a class="text-decoration-none text-dark" href="{% url 'soldier-detail' soldier.pk %}">
+                            {{ soldier.last_name }} {{ soldier.first_name }} ({{ soldier.rank }})</a></td>
+                    <td class="col col-md-1 px-0">{{ soldier.L4 }}</td>
+                    <td class="col col-md-1 px-0">{{ soldier.Dyżury }}</td>
+                    <td class="col col-md-1 px-0">{{ soldier.Służby }}</td>
+                    <td class="col col-md-1 px-0">{{ soldier.HDK }}</td>
+                    <td class="col col-md-1 px-0">{{ soldier.Urlopy }}</td>
+                    <td class="col col-md-1 px-0">{{ soldier.Kursy }}</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 
 {% endblock %}
